[metadata]
name = cradox
author = Mehdi Abaakouk
author_email = sileht@sileht.net
home-page = https://github.com/sileht/pycradox
summary = Python libraries for the Ceph librados library with use cython instead of ctypes
description-file = README.rst
classifiers =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Lesser General
    Public License v2 (LGPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_ext]
pre-hook.pre_build_ext = setup.pre_build_ext

[pbr]
warnerrors = True
